--- a/src/components/weight/weighComponent.css
+++ b/src/components/weight/weighComponent.css
@@ -311,3 +311,32 @@
 	height: 10px;
 	width: 2px;
 }
+
+.nav-wrapper {
+	background-color: var(--color-dark);
+	border-radius: 10px;
+	margin-top: 6px;
+}
+
+.tabs-list {
+	display: flex;
+	list-style: none;
+	margin: 0;
+	position: relative;
+	padding: 6px;
+}
+
+.tab-item {
+	flex: 1;
+	padding: 5px 0;
+	font-size: 12px;
+	font-weight: 600;
+	text-align: center;
+	cursor: pointer;
+	position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: color 0.2s ease;
+	-webkit-tap-highlight-color: transparent;
+}
